<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hqiit_vlm</name>
  <version>0.0.0</version>
  <description>ROS 2 VLM交互节点功能包</description>
  <maintainer email="your_email@xxx.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 核心依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>  <!-- 图像消息类型 -->
  <exec_depend>std_msgs</exec_depend>     <!-- 文本消息类型 -->
  <exec_depend>cv_bridge</exec_depend>    <!-- 图像格式转换（ROS→OpenCV） -->
    <exec_depend>geometry_msgs</exec_depend>  <!-- 添加此行用于Twist消息类型 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>